<resources>
    <string name="app_name">ShopManager</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_appnavigation_button_home">Home</string>
    <string name="fragment_appnavigation_button_sales">Sales</string>
    <string name="fragment_appnavigation_button_stock">Stock</string>
    <string name="activity_home_text_title">Manager Portal</string>
    <string name="activity_home_text_sales">Latest Sales</string>
    <string name="activity_home_button_salesviewmore">View More</string>
    <string name="activity_home_button_salescreatenew">Create</string>
    <string name="activity_home_button_stocklatest">Latest Stock</string>
    <string name="activity_home_button_stocktop">Top Stock</string>
    <string name="activity_home_button_stockviewmore">View More</string>
    <string name="activity_home_button_stockcreatenew">Create</string>
    <string name="activity_home_constraint_analyticssales_text_title">Sales</string>
    <string name="activity_sales_text_analyticstotallabel">Total</string>
    <string name="activity_home_text_analyticstodaylabel">Today</string>
    <string name="activity_home_constraint_analyticstock_text_title">Stock</string>
    <string name="activity_home_constraint_analyticstock_text_labeltotalstock">Total Items</string>
    <string name="activity_home_constraint_analyticstock_text_labelcategorytypes">Categories</string>
    <string name="activity_sales_constraint_sales_text_labelsalesmonthly">Monthly</string>
    <string name="activity_sales_constraint_sales_text_labelsalesweekly">Weekly</string>
    <string name="activity_sales_constraint_filters_edittext_search">Search</string>
    <string name="activity_sales_constraint_filters_button_filters">Filters</string>
    <string name="activity_stock_list_header_text_title">Inventory</string>
    <string name="activity_home_constraint_analyticstock_text_labeltotalsales">Total Sales</string>
    <string name="activity_home_constraint_stock_text_lateststock">Latest Stock</string>
    <string name="activity_newsale_container_header_text_title">Create New Sale</string>
    <string name="activity_newsale_container_form_text_title">Products</string>
    <string name="activity_newsale_container_form_container_text_labelsoldby">Sold By</string>
    <string name="activity_newsale_button_addsale">Add Sale</string>
    <string name="activity_newstock_header_text_title">Add new shoe</string>
    <string name="activity_newstock_button_previoustab">Previous</string>
    <string name="activity_newstock_button_nexttab">Next</string>
    <string name="channel_name">Notifications Channel</string>
    <string name="channel_description">Notifications Description</string>
    <string name="fragment_newstock_form_basicdetails_text_title">General shoe details</string>
    <string name="fragment_newstock_form_basicdetails_edittext_name">Name</string>
    <string name="fragment_newstock_form_basicdetails_edittext_brand">Brand</string>
    <string name="fragment_newstock_form_basicdetails_edittext_code">Code</string>
    <string name="fragment_newstock_form_basicdetails_edittext_color">Color</string>
    <string name="fragment_newstock_form_basicdetails_button_addimage">Add Image</string>
    <string name="fragment_newstock_form_categorizations_text_title">Categorizations</string>
    <string name="fragment_newstock_form_categorizations_edittext_category">Category</string>
    <string name="fragment_newstock_form_categorizations_edittext_gender">Gender</string>
    <string name="recyclerview_sizeintentory_row_text_items">Items</string>
    <string name="recyclerview_sizeintentory_row_button_size">Size 00</string>
    <string name="fragment_newstock_form_price_text_title">Price</string>
    <string name="fragment_newstock_form_price_edittext_discountprice">Discounted Price</string>
    <string name="fragment_newstock_form_price_edittext_originalprice">Original Price</string>
    <string name="activity_newstock_button_complete">Complete</string>
    <string name="activity_newsale_contaienr_form_container_selectcolor_text_selectedlabel">Select color for</string>
    <string name="activity_newsale_container_form_container_selectsize_text_selectlabel">Select size for</string>
    <string name="activity_newsale_container_form_container_selectsize_text_selectcolor">Color</string>
    <string name="activity_newsale_container_form_container_searcherror_text_error">Add at least one item in the list</string>
    <string name="activity_newsale_container_form_container_soldbyerror_text_error">Add the name of the seller</string>
    <string name="input_error_noinput">Please fill input</string>
    <string name="input_error_similarstockfound"><![CDATA[The brand, code & color combination already exists]]></string>
    <string name="fragment_newstock_form_categorizations_radiogroup_gender_male">Male</string>
    <string name="fragment_newstock_form_categorizations_radiogroup_gender_female">Female</string>
    <string name="fragment_newstock_form_categorizations_radiogroup_gender_unisex">Unisex</string>
    <string name="fragment_newstock_form_categorizations_text_genderlabel">Gender</string>
    <string name="input_error_sizenoinput">Please select and fill the stock count of your inventory</string>
    <string name="fragment_newstock_form_price_discountpriceerror_text_error">Discounted price is larger than price</string>
    <string name="activity_newsale_container_form_edittext_searchproduct">Search for a product</string>
    <string name="main_activity_checkbox_fetching_sales">Fetching All Sales</string>
    <string name="main_activity_checkbox_fetching_stock">Fetching Available Stock</string>
    <string name="activity_main_checkbox_calculating_analytics">Loading Analytics</string>
    <string name="main_activity_about">Made by Pandelis Bezolli and Trifon Mazarakis.</string>
    <string name="activity_stocks_no_items">Looks like you haven\'t added any items yet.</string>
    <string name="activity_sales_no_items">Looks like there haven\'t been any sales yet.</string>
</resources>