<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    tools:context=".AppNavigationFragment">

    <Button
        android:id="@+id/fragment_appnavigation_button_home"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_appnavigation_button_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_appnavigation_button_sales"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_appnavigation_button_sales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_appnavigation_button_stock"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toEndOf="@+id/fragment_appnavigation_button_home"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_appnavigation_button_stock"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/fragment_appnavigation_button_stock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>