<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/fragment_newstock_form_basicdetails_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/fragment_newstock_form_basicdetails_text_title"
        android:textColor="@color/neutral_900"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_newstock_form_basicdetails_textinputlayout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/text_input_layout_box_stroke"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_newstock_form_basicdetails_text_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_newstock_form_basicdetails_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/fragment_newstock_form_basicdetails_edittext_name"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/blue_600"
            android:textColorHighlight="@color/blue_600"
            android:textColorLink="@color/blue_600"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_newstock_form_basicdetails_textinputlayout_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/text_input_layout_box_stroke"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/blue_600"
        app:layout_constraintEnd_toStartOf="@+id/fragment_newstock_form_basicdetails_textinputlayout_code"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_newstock_form_basicdetails_textinputlayout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_newstock_form_basicdetails_edittext_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/fragment_newstock_form_basicdetails_edittext_brand"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/blue_600"
            android:textColorHighlight="@color/blue_600"
            android:textColorLink="@color/blue_600"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_newstock_form_basicdetails_textinputlayout_code"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/text_input_layout_box_stroke"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fragment_newstock_form_basicdetails_textinputlayout_brand"
        app:layout_constraintTop_toTopOf="@+id/fragment_newstock_form_basicdetails_textinputlayout_brand">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_newstock_form_basicdetails_edittext_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/fragment_newstock_form_basicdetails_edittext_code"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/blue_600"
            android:textColorHighlight="@color/blue_600"
            android:textColorLink="@color/blue_600"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_newstock_form_basicdetails_textinputlayout_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/text_input_layout_box_stroke"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_newstock_form_basicdetails_textinputlayout_brand">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_newstock_form_basicdetails_edittext_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/fragment_newstock_form_basicdetails_edittext_color"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/blue_600"
            android:textColorHighlight="@color/blue_600"
            android:textColorLink="@color/blue_600"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_newstock_form_basicdetails_button_addimage"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="265dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/fragment_newstock_form_basicdetails_button_addimage"
        android:textColor="@color/blue_600"
        android:textSize="12sp"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_newstock_form_basicdetails_textinputlayout_color"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/neutral_300"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>