<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forms.NewStockFormCategorizations">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/fragment_newstock_form_categorizations_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/fragment_newstock_form_categorizations_text_title"
        android:textColor="@color/neutral_900"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_newstock_form_categorizations_textinputlayout_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:hintTextColor="@color/blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_newstock_form_categorizations_text_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_newstock_form_categorizations_edittext_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_newstock_form_categorizations_edittext_category"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/blue_600"
            android:textColorHighlight="@color/blue_600"
            android:textColorHint="@color/blue_600" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_newstock_form_categorizations_textinputlayout_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/text_input_layout_box_stroke"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_newstock_form_categorizations_textinputlayout_category">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_newstock_form_categorizations_edittext_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_newstock_form_categorizations_edittext_gender"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/blue_600"
            android:textColorHighlight="@color/blue_600"
            android:textColorHint="@color/blue_600" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>